# testing_cmake

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  configure.sh  main.cpp  run.sh
src/add/: CMakeLists.txt  main.cpp
src/windowing/: CMakeLists.txt  main.cpp  window-config.h.in
